--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/MyPic.png" />
+    <link rel="icon" href="%PUBLIC_URL%/MyPic.JPG" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,10 +10,10 @@
             content="My private site for introduce myself and my career"
     />
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="/MyPic.png" sizes="192*192">
+    <link rel="apple-touch-icon" href="/MyPic.JPG" sizes="192*192">
 
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/MyPic.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/MyPic.JPG" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
